Bug 34931 - FAIL: gcc.dg/pr28796-[12].c (test for excess errors)
Summary: FAIL: gcc.dg/pr28796-[12].c (test for excess errors)
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: middle-end (show other bugs)
Version: 4.2.3
: P3 normal
Target Milestone: 4.2.3
Assignee: Richard Biener
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-01-23 02:09 UTC by John David Anglin
Modified: 2008-01-24 17:25 UTC (History)
1 user (show)

See Also:
Host: hppa2.0w-hp-hpux11.11
Target: hppa2.0w-hp-hpux11.11
Build: hppa2.0w-hp-hpux11.11
Known to work:
Known to fail:
Last reconfirmed: 2008-01-23 10:34:45


Attachments
pr28796-1.c.003t.original (111 bytes, text/plain)
2008-01-23 02:29 UTC, dave
Details

Note You need to log in before you can comment on or make changes to this bug.
Description John David Anglin 2008-01-23 02:09:52 UTC
Executing on host: /mnt/gnu/gcc/objdir/gcc/xgcc -B/mnt/gnu/gcc/objdir/gcc/ /mnt/
gnu/gcc/gcc/gcc/testsuite/gcc.dg/pr28796-1.c   -ffinite-math-only -fno-show-colu
mn  -lm   -o pr28796-1.exe    (timeout = 300)
/usr/ccs/bin/ld: Unsatisfied symbols:
   link_error (first referenced in /var/tmp//ccjtth6i.o) (code)
collect2: ld returned 1 exit status
compiler exited with status 1
output is:
/usr/ccs/bin/ld: Unsatisfied symbols:
   link_error (first referenced in /var/tmp//ccjtth6i.o) (code)
collect2: ld returned 1 exit status

FAIL: gcc.dg/pr28796-1.c (test for excess errors)
Excess errors:
/usr/ccs/bin/ld: Unsatisfied symbols:
   link_error (first referenced in /var/tmp//ccjtth6i.o) (code)

Executing on host: /mnt/gnu/gcc/objdir/gcc/xgcc -B/mnt/gnu/gcc/objdir/gcc/ /mnt/
gnu/gcc/gcc/gcc/testsuite/gcc.dg/pr28796-2.c   -O2 -funsafe-math-optimizations -
fno-show-column  -lm   -o ./pr28796-2.exe    (timeout = 300)
/usr/ccs/bin/ld: Unsatisfied symbols:
   finite (first referenced in /var/tmp//ccklYEaP.o) (code)
collect2: ld returned 1 exit status
compiler exited with status 1
output is:
/usr/ccs/bin/ld: Unsatisfied symbols:
   finite (first referenced in /var/tmp//ccklYEaP.o) (code)
collect2: ld returned 1 exit status

FAIL: gcc.dg/pr28796-2.c (test for excess errors)
Excess errors:
/usr/ccs/bin/ld: Unsatisfied symbols:
   finite (first referenced in /var/tmp//ccklYEaP.o) (code)

This is with revision revision 131740.
Comment 1 dave 2008-01-23 02:29:37 UTC
Subject: Re:   New: [4.2 Regression] FAIL:
	gcc.dg/pr28796-[12].c (test for excess errors)

>    link_error (first referenced in /var/tmp//ccjtth6i.o) (code)

Attached is tree dump.

Dave
Comment 2 dave 2008-01-23 02:29:37 UTC
Created attachment 15000 [details]
pr28796-1.c.003t.original
Comment 3 Andrew Pinski 2008-01-23 02:41:23 UTC
I don't think this is a regression, this is a new testcase for the branch.  There was most likely a forgot patch that should have been backported.
Comment 4 dave 2008-01-23 03:04:22 UTC
Subject: Re:  FAIL: gcc.dg/pr28796-[12].c (test for excess errors)

> I don't think this is a regression, this is a new testcase for the branch. 

Yes, I missed the fact that the testcases are new.

> There was most likely a forgot patch that should have been backported.

For some reason, __builtin_finite() seems broken.

Dave
Comment 5 Richard Biener 2008-01-23 10:34:45 UTC
Of course I tested the backport on x86_64-unknown-linux-gnu, where it worked
for me.  And it should via

fold_builtin_classify
...
    case BUILT_IN_FINITE:
      if (!HONOR_NANS (TYPE_MODE (TREE_TYPE (arg)))
          && !HONOR_INFINITIES (TYPE_MODE (TREE_TYPE (arg))))
        return omit_one_operand (type, integer_zero_node, arg);

ha!  And indeed we miss:

2006-10-21  Richard Guenther  <rguenther@suse.de>

        * builtins.c (fold_builtin_classify): Fix typo.

I'll take care of it.
Comment 6 Richard Biener 2008-01-23 10:38:29 UTC
Fixed.
Comment 7 dave 2008-01-24 00:47:26 UTC
Subject: Re:  FAIL: gcc.dg/pr28796-[12].c (test for excess errors)

> Fixed.

Unfortunately, only the first testcase is fixed.  We still have

FAIL: gcc.dg/pr28796-2.c (test for excess errors)
Excess errors:
/usr/ccs/bin/ld: Unsatisfied symbols:
   finite (first referenced in /var/tmp//ccEVbuEL.o) (code)

Think we also need the following fix:

2007-01-25  Steve Ellcey  <sje@cup.hp.com>

        PR other/30182
	* config/pa/pa.c (pa_init_builtins): Set asm names for finite routines.
	* config/ia64/ia64.c (ia64_init_builtins):  Ditto.

Dave
Comment 8 John David Anglin 2008-01-24 02:39:03 UTC
Testing backend fix.
Comment 9 John David Anglin 2008-01-24 17:19:39 UTC
Subject: Bug 34931

Author: danglin
Date: Thu Jan 24 17:18:54 2008
New Revision: 131797

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=131797
Log:
	PR middle-end/34931
	Backport:
	2007-01-25  Steve Ellcey  <sje@cup.hp.com>

	PR other/30182
	* config/pa/pa.c (pa_init_builtins): Set asm names for finite routines.
	* config/ia64/ia64.c (ia64_init_builtins):  Ditto.

	2007-01-26  Steve Ellcey  <sje@cup.hp.com>

	PR other/30182
	* config/pa/pa.h (TARGET_HPUX_11): New.
	* config/pa/pa-hpux11.h (TARGET_HPUX_11): New.
	* config/pa/pa.c (pa_init_builtins): Use TARGET_HPUX_11.


Modified:
    branches/gcc-4_2-branch/gcc/config/ia64/ia64.c
    branches/gcc-4_2-branch/gcc/config/pa/pa-hpux11.h
    branches/gcc-4_2-branch/gcc/config/pa/pa.c
    branches/gcc-4_2-branch/gcc/config/pa/pa.h

Comment 10 John David Anglin 2008-01-24 17:25:17 UTC
The finite builtins should now find the right libc functions on hpux11.